# CooPlan

./: CMakeLists.txt  Makefile  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
src/: main.cpp
src/common/: response_helpers.cpp  response_helpers.hpp
src/handlers/lib/: auth.cpp  auth.hpp
src/handlers/v1/create_event/: view.cpp  view.hpp
src/handlers/v1/delete_event/: view.cpp  view.hpp
src/handlers/v1/disjoin_event/: view.cpp  view.hpp
src/handlers/v1/edit_event/: view.cpp  view.hpp
src/handlers/v1/get-event-by-id/: view.cpp  view.hpp
src/handlers/v1/get-events/: view.cpp  view.hpp
src/handlers/v1/get-profile/: view.cpp  view.hpp
src/handlers/v1/join_event/: view.cpp  view.hpp
src/handlers/v1/joined-events/: view.cpp  view.hpp
src/handlers/v1/joined_events/: view.cpp  view.hpp
src/handlers/v1/login/: view.cpp  view.hpp
src/handlers/v1/organized-events/: view.cpp  view.hpp
src/handlers/v1/register/: view.cpp  view.hpp
src/handlers/v1/register-user/: view.cpp
src/handlers/v1/requests_for_organizator/: view.cpp  view.hpp
src/handlers/v1/response-to-join/: view.cpp  view.hpp
src/handlers/v1/status_of_request/: view.cpp  view.hpp
src/models/: event.cpp  event.hpp  event_participant.cpp  event_participant.hpp  session.hpp  user.hpp
tests/: conftest.py  test_create_event.py  test_delete_event.py  test_disjoin_event.py  test_edit_event.py  test_event_requests.py  test_get_profile.py  test_join_event.py  test_joined_events.py  test_organized_events.py  test_register.py  test_requests_for_organizator.py  test_status_of_request.py
